--- a/package.json
+++ b/package.json
@@ -17,7 +17,18 @@
   },
   "homepage": "https://github.com/ethanlindley/someserver#readme",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.18.2",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
+    "ejs": "^2.5.7",
     "express": "^4.16.2",
-    "http-errors": "^1.6.2"
+    "express-session": "^1.15.6",
+    "http-errors": "^1.6.2",
+    "method-override": "^2.3.10",
+    "mongoose": "^4.13.0",
+    "morgan": "^1.9.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
